--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,20 @@
     <string name="create">Создать пользователя</string>
     <string name="mail">Email</string>
     <string name="mailtext">xyz@gmail.com</string>
+    <string name="dobropozh">ДОБРО ПОЖАЛОВАТЬ</string>
+    <string name="nachat">Начать</string>
+    <string name= "travel">Начнем путешествие</string>
+    <string name= "next">Далее</string>
+    <string name= "sila">У Вас Есть Сила, Чтобы</string>
+    <string name= "home">Главная</string>
+    <string name= "descript_sila">В вашей комнате много красивых и привлекательных растений</string>
+    <string name= "search">Поиск</string>
+    <string name="descript_travel">Умная, великолепная и модная коллекцтя Изучите сейчас</string>
+    <string name= "category">Категории</string>
+    <string name= "popularity">Популярное
+</string><string name= "sale">Акции</string>
+    <string name= "all">Всё</string>
+    <string name= "outdoor">Outdoor</string>
+    <string name= "tennis">Tennis</string>
+
 </resources>
